--- a/package.json
+++ b/package.json
@@ -31,9 +31,5 @@
     "react-tools": "^0.13.3"
   },
   "devDependencies": {},
-  "description": "",
-  "engines": {
-    "node": "5.6.0",
-    "npm":"3.7.1"
-  }
+  "description": ""
 }
