--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/HaareeKrishna/2048-reactJS#readme",
   "dependencies": {
+    "react":"^0.14.7",
+    "react-dom":"^0.14.7",
     "babel-jest": "^6.0.1",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
@@ -27,7 +29,8 @@
     "multer": "^1.1.0",
     "react-addons-test-utils": "^0.14.7",
     "react-router": "^2.0.0",
-    "react-tools": "^0.13.3"
+    "react-tools": "^0.13.3",
+    "mathjs":"^2.7.0"
   },
   "devDependencies": {},
   "jest": {
